[package]
name = "biscuit-python"
version = "0.2.1"
edition = "2021"
rust-version = "1.79"

[lib]
name = "biscuit_auth"
crate-type = ["cdylib"]

[dependencies]
biscuit-auth = { version = "4.1.1", features = ["pem"] }
pyo3 = { version = "0.18.3", features = ["extension-module", "chrono"]}
hex = "0.4"
base64 = "0.13.0"
chrono = "0.4"
time = "0.3.36"
