[package]
name = "biscuit-python"
version = "0.3.2"
edition = "2021"

[lib]
name = "biscuit_auth"
crate-type = ["cdylib"]

[dependencies]
biscuit-auth = { version = "5.0.0", features = ["pem"] }
pyo3 = { version = "0.18.3", features = ["extension-module", "chrono"]}
hex = "0.4"
base64 = "0.13.0"
chrono = "0.4"
